# SerialBridge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  CobsSerial.hpp  HALSPISerial.hpp  MCP2210Linux.hpp  Message.hpp  STM32SPISerial.hpp  SerialBridge.hpp  SerialInterface.hpp  SyncSerialDev.hpp  SyncableSerial.hpp  mcp2210_api.h
src/source/: CMakeLists.txt  CobsSerial.cpp  HALSPISerial.cpp  MCP2210Linux.cpp  Message.cpp  STM32SPISerial.cpp  SerialBridge.cpp  SyncableSerial.cpp  mcp2210_api.c  mcp2210_api.cpp
